# Master-Research

./: CMakeCache.txt  CMakeLists.txt  GraphPartitioning  Makefile  README.md  cmake_install.cmake  dbh.cpp  dbh.hpp  hdrf.cpp  main.cpp  memory.cpp  memory.hpp  memory_for_pre.cpp  memory_for_pre.hpp  page_update_frequency.cpp  page_update_frequency_ULONG.cpp  pagerank.cpp  partitioner.hpp  pre_processing.cpp  pre_processing.hpp  storage.cpp  storage.hpp  util.hpp
converter/: conversions.hpp
ne_partitioner/: graph.cpp  graph.hpp  ne.cpp  ne.hpp
streaming_vp/: fennel.cpp
